overflow fix

--- a/coden/static/css/styles.css
+++ b/coden/static/css/styles.css
@@ -1,7 +1,10 @@
+html,
+body {
+    overflow-x: none;
+}
+
 body {
     background-color: #1C2541;
-    overflow-x: hidden !important;
-    width: 100%;
 }
 
 #login_bg {
